--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/about.css">
     <link rel="stylesheet" href="../css/services.css">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/home.css">
     <title>Branc Name</title>
 </head>
@@ -29,17 +30,16 @@
     </div>
     <!-- end nav section -->
     <main>
-        <div class="blue content-padding pt0">
+        <div class="blue content-padding pt0 text-align-center-m">
             <h1 class="heading mt0">The Most Reliable Web Design and Development Services In Toronto</h1>
             <p class="heading-text">
-                We can deliver and develop websites and mobile applications as per your needs.
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod “
+                Develop and expand with assurance. We have you covered with everything from robust site infrastructure to cutting-edge business solutions.
             </p>
         </div>
         <div>
-            <div class="card-container content-padding">
+            <div class="card-container content-padding text-align-center-m">
                 <div class="inner-box">
-                    <img src="../img/team2.jpg" alt="Team">
+                    <img src="../img/Team.svg" alt="Team">
                 </div>
                 <div class="inner-box">
                     <h2>
@@ -51,9 +51,10 @@
                         organizations from startups to MNC’s
                     </h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                        ex ea commodo consequat. Duis aute irure 
+                        A team of full-stack software developers with work experience
+                        bring a diverse range of skills and experiences to the table. 
+                        Here are some potential benefits of such a team
+                        in various organizations from startups to MNCs is likely to 
                     </p>
                 </div>
             </div>
@@ -62,41 +63,47 @@
             <h1 class="sub-heading">Our Services</h1>
             <div class="card-container">
                 <div class="card">
-                    <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                    <div  class="svc-img">
+                        <img src="../img/ui_ux_des.svg" alt="Rating">
+                    </div>
                     <p class="svc-name">
-                        UI & UX
+                        UI/UX design
                     </p>
                     <p class="svc-text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                        corporis, unde ea!
+                        We design your application or website based on your requirements and target customers.
+                        <br>
+                        Technologies used <strong>Figma, adobe etc.</strong>                    
                     </p>
                 </div>
                 <div class="card">
-                    <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                    <div  class="svc-img">
+                        <img src="../img/web_development.svg" alt="Rating">
+                    </div>
                     <p class="svc-name">
-                        UI & UX
+                        UI/UX development
                     </p>
                     <p class="svc-text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                        corporis, unde ea!
+                        We design and develop your application or website based design.
+                        <br>
+                        Technologies used <strong>React, Native React, Angular etc.</strong>  
                     </p>
                 </div>
                 <div class="card">
-                    <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                    <div  class="svc-img">
+                        <img src="../img/database.svg" alt="Rating">
+                    </div>
                     <p class="svc-name">
-                        UI & UX
+                        Database development
                     </p>
                     <p class="svc-text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                        corporis, unde ea!
+                        Developing database with all the entities and attributes as per your business needs
+                        <br>
+                        Technologies used <strong>Postgres, MongoDB, MySQL etc.</strong>  
                     </p>
                 </div>
             </div>
             <div class="btm-container">
-                <button>
+                <button onclick="location.href = 'services.html';">
                     See all services
                 </button>
             </div>
@@ -104,12 +111,12 @@
         <div class="content-padding blue">
             <h1 class="sub-heading white">Our Portfolio</h1>
             <div class="card-container img-link">
-                <img src="../img/team2.jpg" alt="Team">
-                <img src="../img/team2.jpg" alt="Team">
-                <img src="../img/team2.jpg" alt="Team">
-                <img src="../img/team2.jpg" alt="Team">
-                <img src="../img/team2.jpg" alt="Team">
-                <img src="../img/team2.jpg" alt="Team">
+                <img src="../img/p1.png" alt="Team">
+                <img src="../img/p2.png" alt="Team">
+                <img src="../img/p3.png" alt="Team">
+                <img src="../img/p4.png" alt="Team">
+                <img src="../img/p5.png" alt="Team">
+                <img src="../img/p6.png" alt="Team">
             </div>
         </div>
         <div class="content-padding">
@@ -124,12 +131,13 @@
                         <img class="star" src="../img/star.jpg" alt="Rating">
                     </div>
                     <p class="review">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                        corporis, unde ea!
+                        I've worked with many software development companies over the years, and this one is 
+                        by far the best. Their attention to detail and dedication to quality is second to none. 
+                        They take the time to understand our small business and deliver solutions that are tailored 
+                        to our specific needs. Highly recommended!
                     </p>
                     <p class="reviewer">
-                        Jay, Google
+                        Olivia Kim (Greenery Landscaping)
                     </p>
                 </div>
                 <div class="card">
@@ -141,12 +149,10 @@
                         <img class="star" src="../img/star.jpg" alt="Rating">
                     </div>
                     <p class="review">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                        corporis, unde ea!
+                        I was really impressed with their design skills. The team was able to take my vision and turn it into a beautiful, user-friendly website that perfectly captures the essence of my brand.
                     </p>
                     <p class="reviewer">
-                        Jay, Google
+                        David Wilson (Surfside Vacation Rentals)
                     </p>
                 </div>
                 <div class="card">
@@ -158,28 +164,91 @@
                         <img class="star" src="../img/star.jpg" alt="Rating">
                     </div>
                     <p class="review">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                        corporis, unde ea!
+                        I was amazed at the level of quality and attention to detail that this firm was able to deliver, even though we had a very limited budget. The team was creative and resourceful, and they were able to find cost-effective solutions that didn't compromise on the end result, I would definitely recommend them to others.
                     </p>
                     <p class="reviewer">
-                        Jay, Google
+                        Lisa Rodriguez (City Cake Bakery)
                     </p>
                 </div>
             </div>
             <div class="btm-container">
-                <button>
+                <button onclick="location.href = 'about.html';">
                     Know more about us
                 </button>
             </div>
         </div>
         <div class="banner">
             <p>Got any questions?</p>
-            <button>
+            <button onclick="location.href = 'contact.html#contact-form';">
                 Contact us
             </button>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="content-padding flex">
+            <div class="col1">
+                <div class="row">
+                    <h3>Address</h3>
+                    <p>
+                        44 Valley Woods Road, <br>
+                        North york, Toronto, <br>
+                        M3A 2R6
+                    </p>
+                </div>
+                <div class="row">
+                    <h3> Call Us </h3>
+                    <a href="tel:+14374258045">+1 437 425 8045</a>
+                </div>
+                <div class="row">
+                    <h3> Mail Us </h3>
+                    <a href="mailto:brandname@example.com">brandname@example.com</a>
+                </div>
+            </div>
+            <div class="col2">
+                <h3 class = "hours"> Business Hours </h3>
+                <table>
+                    <tr>
+                      <td>Monday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Tuesday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Wednesday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Thursday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Friday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Saturday</td>
+                      <td>Closed</td>
+                    </tr>
+                    <tr>
+                      <td>Sunday</td>
+                      <td>Closed</td>
+                    </tr>
+                  </table>
+            </div>
+            <div class="col3">
+                <iframe
+                    src="https://www.google.ca/maps/place/44+Valley+Woods+Rd,+North+York,+ON+M3A+2R6/@43.7547867,-79.3357049,17z/data=!3m1!4b1!4m6!3m5!1s0x89d4d27dc65e142f:0x486009f6c2256cff!8m2!3d43.7547867!4d-79.3335162!16s%2Fg%2F11b8zhmr8y"
+                   style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+        </div>
+        <p class="copyright">Copyright &copy; 2023 brandname | All rights reserved.</p>
+    </footer>
 </body>
 </html>
