--- a/html/services.html
+++ b/html/services.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/services.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Branc Name</title>
 </head>
@@ -29,88 +30,164 @@
         <div class="blue content-padding">
             <h1 class="heading">Services</h1>
             <p class="heading-text">
-                We can deliver and develop websites and mobile applications as per your needs.
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod “
+                Develop and expand with assurance. We have you covered with everything from robust site infrastructure to cutting-edge business solutions.
             </p>
         </div>
         <div class="content-padding">
             <h1 class="sub-heading">Our Services</h1>
             <div class="card-container">
                 <div class="card">
-                    <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                    <div  class="svc-img">
+                        <img src="../img/ui_ux_des.svg" alt="Rating">
+                    </div>
                     <p class="svc-name">
-                        UI & UX
+                        UI/UX design
                     </p>
                     <p class="svc-text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                        corporis, unde ea!
+                        We design your application or website based on your requirements and target customers.
+                        <br>
+                        Technologies used <strong>Figma, adobe etc.</strong>                    
                     </p>
                 </div>
                 <div class="card">
-                    <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                    <div  class="svc-img">
+                        <img src="../img/web_development.svg" alt="Rating">
+                    </div>
                     <p class="svc-name">
-                        UI & UX
+                        UI/UX development
                     </p>
                     <p class="svc-text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                        corporis, unde ea!
+                        We design and develop your application or website based design.
+                        <br>
+                        Technologies used <strong>React, Native React, Angular etc.</strong>  
                     </p>
                 </div>
                 <div class="card">
-                    <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                    <div  class="svc-img">
+                        <img src="../img/database.svg" alt="Rating">
+                    </div>
                     <p class="svc-name">
-                        UI & UX
+                        Database development
                     </p>
                     <p class="svc-text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                        corporis, unde ea!
+                        Developing database with all the entities and attributes as per your business needs
+                        <br>
+                        Technologies used <strong>Postgres, MongoDB, MySQL etc.</strong>  
                     </p>
                 </div>
                 <div class="card">
-                    <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                    <div  class="svc-img">
+                        <img src="../img/full_stack.svg" alt="Rating">
+                    </div>
                     <p class="svc-name">
-                        UI & UX
+                        Full-stack Application
                     </p>
                     <p class="svc-text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                        corporis, unde ea!
+                        We develop applicaiton end to end from designing wireframe to deploying to cloud
+                        <br>
+                        Technologies used <strong>MERN stack or MEAN stack etc.</strong>
                     </p>
                 </div>
                 <div class="card">
-                    <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                    <div  class="svc-img">
+                        <img src="../img/devops.svg" alt="Rating">
+                    </div>
                     <p class="svc-name">
-                        UI & UX
+                        Deployment and maintenance services
                     </p>
                     <p class="svc-text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                        corporis, unde ea!
+                        Already have an application, need maintenance? We maintain and configure Deployment Lifecycle.
+                        <br>
+                        Technologies used <strong>Jenkins, Kubernetes etc.</strong> 
                     </p>
                 </div>
                 <div class="card">
-                    <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                    <div  class="svc-img">
+                        <img src="../img/training.svg" alt="Rating">
+                    </div>
                     <p class="svc-name">
-                        UI & UX
+                        Corporate Developers Training
                     </p>
                     <p class="svc-text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                        corporis, unde ea!
+                        Upgrade skills of your developers with the latest technologies with one day workshops or training.
+                        <br>
+                        Technologies we train <strong>Web development, database development etc.</strong> 
                     </p>
                 </div>
             </div>
         </div>
         <div class="banner">
             <p>Got any questions?</p>
-            <button>
+            <button onclick="location.href = 'contact.html#contact-form';">
                 Contact us
             </button>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="content-padding flex">
+            <div class="col1">
+                <div class="row">
+                    <h3>Address</h3>
+                    <p>
+                        44 Valley Woods Road, <br>
+                        North york, Toronto, <br>
+                        M3A 2R6
+                    </p>
+                </div>
+                <div class="row">
+                    <h3> Call Us </h3>
+                    <a href="tel:+14374258045">+1 437 425 8045</a>
+                </div>
+                <div class="row">
+                    <h3> Mail Us </h3>
+                    <a href="mailto:brandname@example.com">brandname@example.com</a>
+                </div>
+            </div>
+            <div class="col2">
+                <h3 class = "hours"> Business Hours </h3>
+                <table>
+                    <tr>
+                      <td>Monday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Tuesday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Wednesday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Thursday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Friday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Saturday</td>
+                      <td>Closed</td>
+                    </tr>
+                    <tr>
+                      <td>Sunday</td>
+                      <td>Closed</td>
+                    </tr>
+                  </table>
+            </div>
+            <div class="col3">
+                <iframe
+                    src="https://www.google.ca/maps/place/44+Valley+Woods+Rd,+North+York,+ON+M3A+2R6/@43.7547867,-79.3357049,17z/data=!3m1!4b1!4m6!3m5!1s0x89d4d27dc65e142f:0x486009f6c2256cff!8m2!3d43.7547867!4d-79.3335162!16s%2Fg%2F11b8zhmr8y"
+                   style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+        </div>
+        <p class="copyright">Copyright &copy; 2023 brandname | All rights reserved.</p>
+    </footer>
 </body>
 </html>
