--- a/html/about.html
+++ b/html/about.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Branc Name</title>
 </head>
@@ -29,8 +30,9 @@
         <div class="blue content-padding">
             <h1 class="heading">About Us</h1>
             <p class="heading-text">
-                We can deliver and develop websites and mobile applications as per your needs.
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod “
+                We are a software development firm specializing in building innovative 
+                and customized solutions for businesses. Our team of experts is dedicated to delivering
+                high-quality software that helps our clients achieve their goals and drive growth.
             </p>
         </div>
         <div class="card-container content-padding">
@@ -42,9 +44,16 @@
                     Who are we?
                 </h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                    ex ea commodo consequat. Duis aute irure 
+                    Full-stack developers are professionals who have the skills and knowledge
+                    to handle both front-end and back-end development. 
+                    They can work on all aspects of a web application, 
+                    from designing the user interface to writing the code that 
+                    handles server-side logic and database interactions.
+                    <br><br>
+                    Some common skills and technologies that full-stack developers
+                    need to know include HTML, CSS, JavaScript, server-side programming languages 
+                    like Python or Node.js, databases such as MySQL or MongoDB, and 
+                    web frameworks like Angular, React, or Vue.
                 </p>
             </div>
             <div class="inner-box">
@@ -52,9 +61,12 @@
                     Our Mission
                 </h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                    ex ea commodo consequat. Duis aute irure 
+                    Our mission is to help businesses establish a strong online presence by providing high-quality,
+                    We strive to exceed our clients' expectations by delivering innovative and 
+                    visually appealing designs that not only showcase their brand but also engage 
+                    and convert visitors into customers. Our goal is to be a trusted partner to our clients, 
+                    guiding them through the entire website design process and ensuring their success in the ever-evolving digital landscape. 
+                    user-friendly websites that are tailored to their unique needs. 
                 </p>
             </div>
             <div class="inner-box">
@@ -62,9 +74,14 @@
                     Why choose us?
                 </h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                    ex ea commodo consequat. Duis aute irure 
+                    Customers are likely to choose a company with experience and expertise in designing and developing.
+                    <ul>
+                        <li>Our Portfolio</li>
+                        <li>Good customer service</li>
+                        <li>Competitive pricing</li>
+                        <li>Quality of Work</li>
+                        <li>Turnaround Time</li>
+                    </ul>
                 </p>
             </div>
         </div>
@@ -80,12 +97,13 @@
                         <img class="star" src="../img/star.jpg" alt="Rating">
                     </div>
                     <p class="review">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                        corporis, unde ea!
+                        I've worked with many software development companies over the years, and this one
+                         is by far the best. Their attention to detail and dedication to quality is second
+                          to none. They take the time to understand our small business and
+                          deliver solutions that are tailored to our specific needs. Highly recommended!
                     </p>
                     <p class="reviewer">
-                        Jay, Google
+                        Olivia Kim (Greenery Landscaping)
                     </p>
                 </div>
                 <div class="card">
@@ -97,12 +115,12 @@
                         <img class="star" src="../img/star.jpg" alt="Rating">
                     </div>
                     <p class="review">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                        corporis, unde ea!
+                        I was really impressed with their design skills. The team was able to take my
+                         vision and turn it into a beautiful, user-friendly website that perfectly 
+                         captures the essence of my brand.
                     </p>
                     <p class="reviewer">
-                        Jay, Google
+                        David Wilson (Surfside Vacation Rentals)
                     </p>
                 </div>
                 <div class="card">
@@ -114,12 +132,13 @@
                         <img class="star" src="../img/star.jpg" alt="Rating">
                     </div>
                     <p class="review">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                        corporis, unde ea!
+                        I was amazed at the level of quality and attention to detail that this firm was able
+                         to deliver, even though we had a very limited budget. The team was creative and resourceful,
+                          and they were able to find cost-effective solutions that didn't compromise on the end result
+                          , I would definitely recommend them to others.
                     </p>
                     <p class="reviewer">
-                        Jay, Google
+                        Lisa Rodriguez (City Cake Bakery)
                     </p>
                 </div>
                 <div class="card">
@@ -131,12 +150,13 @@
                         <img class="star" src="../img/star.jpg" alt="Rating">
                     </div>
                     <p class="review">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                        corporis, unde ea!
+                        This software development company is a true partner in our success. They have
+                         helped us to streamline our operations and improve our bottom line with their innovative
+                          solutions. Their team is always available to answer questions and provide support whenever
+                           we need it.
                     </p>
                     <p class="reviewer">
-                        Jay, Google
+                        Raghav Patel  (Global Bullet Logistics)
                     </p>
                 </div>
                 <div class="card">
@@ -148,12 +168,13 @@
                         <img class="star" src="../img/star.jpg" alt="Rating">
                     </div>
                     <p class="review">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                        corporis, unde ea!
+                        "Overall, I'm happy with the work that they did for us. The team was easy
+                         to work with and they delivered the project on time, but there were some issues
+                          with the final product that had to be addressed. They were responsive to our concerns,
+                           but it took longer than we were expecting to get everything sorted out.
                     </p>
                     <p class="reviewer">
-                        Jay, Google
+                        William Lee (Acme Corporation Group)
                     </p>
                 </div>
                 <div class="card">
@@ -165,23 +186,89 @@
                         <img class="star" src="../img/star.jpg" alt="Rating">
                     </div>
                     <p class="review">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
-                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
-                        corporis, unde ea!
+                        I worked with this software development company on a project, and overall it was a
+                         pretty good experience. The team was responsive and delivered the project on time,
+                          but I wasn't particularly impressed with the quality of the code or the user
+                           interface."
                     </p>
                     <p class="reviewer">
-                        Jay, Google
+                        Samantha Martin(Gem Rock Corporation)
                     </p>
                 </div>
             </div>
         </div>
         <div class="banner">
             <p>Got any questions?</p>
-            <button>
+            <button onclick="location.href = 'contact.html#contact-form';">
                 Contact us
             </button>
         </div>
     </main>
-    <footer></footer>   
+    <footer>
+        <div class="content-padding flex">
+            <div class="col1">
+                <div class="row">
+                    <h3>Address</h3>
+                    <p>
+                        44 Valley Woods Road, <br>
+                        North york, Toronto, <br>
+                        M3A 2R6
+                    </p>
+                </div>
+                <div class="row">
+                    <h3> Call Us </h3>
+                    <a href="tel:+14374258045">+1 437 425 8045</a>
+                </div>
+                <div class="row">
+                    <h3> Mail Us </h3>
+                    <a href="mailto:brandname@example.com">brandname@example.com</a>
+                </div>
+            </div>
+            <div class="col2">
+                <h3 class = "hours"> Business Hours </h3>
+                <table>
+                    <tr>
+                      <td>Monday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Tuesday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Wednesday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Thursday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Friday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Saturday</td>
+                      <td>Closed</td>
+                    </tr>
+                    <tr>
+                      <td>Sunday</td>
+                      <td>Closed</td>
+                    </tr>
+                  </table>
+            </div>
+            <div class="col3">
+                <iframe
+                    src="https://www.google.ca/maps/place/44+Valley+Woods+Rd,+North+York,+ON+M3A+2R6/@43.7547867,-79.3357049,17z/data=!3m1!4b1!4m6!3m5!1s0x89d4d27dc65e142f:0x486009f6c2256cff!8m2!3d43.7547867!4d-79.3335162!16s%2Fg%2F11b8zhmr8y"
+                   style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+        </div>
+        <p class="copyright">Copyright &copy; 2023 brandname | All rights reserved.</p>
+    </footer>   
 </body>
 </html>
