--- a/html/contact.html
+++ b/html/contact.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/contact.css">
     <title>Branc Name</title>
 </head>
@@ -30,21 +31,20 @@
         <div class="blue content-padding">
             <h1 class="heading">Contact us</h1>
             <p class="heading-text">
-                We can deliver and develop websites and mobile applications as per your needs.
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod “
+                Contact the appropriate personnel; we are here to assist you.
             </p>
         </div>
         <div class="content-padding">
             <h1 class="sub-heading">Contact us</h1>
             <div class="card-container sb">
                 <div class="sub-text">
-                    <img src="../img/team.jpg" alt="team">
+                    <img src="../img/contact us.svg" alt="team">
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, nobis distinctio aut omnis quidem in harum adipisci libero aspernatur odio a asperiores ratione saepe deserunt quibusdam hic voluptate ex autem!
+                        Get in touch with the right people at brandname. Email a member of our customer care team, marketing team, technical team or HR team.
                     </p>
                 </div>
                 <div class="form-container">
-                    <form method="post" action="https://kgkog.mocklab.io/">
+                    <form id="contact-form" method="get" action="https://www.google.com/">
                         <div class="form-controller-50">
                             <input class="width-99 firstname" type="text" name="firstname" placeholder="First Name" maxlength="100" required>
                         </div>
@@ -59,14 +59,14 @@
                         </div>
                         <div class="form-controller-100">
                             <select name="services" >
-                                <option value="volvo">UI & UX</option>
-                                <option value="volvo">UI & UX</option>
-                                <option value="volvo">UI & UX</option>
-                                <option value="volvo">UI & UX</option>
-                                <option value="volvo">UI & UX</option>
-                                <option value="volvo">UI & UX</option>
-                                <option value="volvo">UI & UX</option>
-                                <option value="volvo">UI & UX</option>
+                                <option selected disabled>Choose a service</option>
+                                <option value="ui_ux_design">UI/UX design</option>
+                                <option value="ui_ux_development">UI/UX development</option>
+                                <option value="database_development">Database development</option>
+                                <option value="full_stack_application_development">Full-stack Application</option>
+                                <option value="deployment_maintenance_services">Deployment and maintenance services</option>
+                                <option value="developer_trainign">Developers Training</option>
+                                <option value="other">Other</option>
                             </select>
                         </div>
                         <div class="form-controller-100">
@@ -79,12 +79,77 @@
         </div>
         <div class="banner">
             <p>Got any questions?</p>
-            <button>
+            <button onclick="location.href = 'contact.html#contact-form';">
                 Contact us
             </button>
         </div>
     </main>
     <!-- Use the footer area to add webpage footer content -->
-    <footer></footer>
+    <footer>
+        <div class="content-padding flex">
+            <div class="col1">
+                <div class="row">
+                    <h3>Address</h3>
+                    <p>
+                        44 Valley Woods Road, <br>
+                        North york, Toronto, <br>
+                        M3A 2R6
+                    </p>
+                </div>
+                <div class="row">
+                    <h3> Call Us </h3>
+                    <a href="tel:+14374258045">+1 437 425 8045</a>
+                </div>
+                <div class="row">
+                    <h3> Mail Us </h3>
+                    <a href="mailto:brandname@example.com">brandname@example.com</a>
+                </div>
+            </div>
+            <div class="col2">
+                <h3 class = "hours"> Business Hours </h3>
+                <table>
+                    <tr>
+                      <td>Monday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Tuesday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Wednesday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Thursday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Friday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Saturday</td>
+                      <td>Closed</td>
+                    </tr>
+                    <tr>
+                      <td>Sunday</td>
+                      <td>Closed</td>
+                    </tr>
+                  </table>
+            </div>
+            <div class="col3">
+                <iframe
+                    src="https://www.google.ca/maps/place/44+Valley+Woods+Rd,+North+York,+ON+M3A+2R6/@43.7547867,-79.3357049,17z/data=!3m1!4b1!4m6!3m5!1s0x89d4d27dc65e142f:0x486009f6c2256cff!8m2!3d43.7547867!4d-79.3335162!16s%2Fg%2F11b8zhmr8y"
+                   style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+        </div>
+        <p class="copyright">Copyright &copy; 2023 brandname | All rights reserved.</p>
+    </footer>
 </body>
 </html>
