added comments and validatod files

--- a/html/about.html
+++ b/html/about.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
+<!--  This template is created by created by: Group(Tanej, Karthik, Saichand, Umanga, Yuzan) -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700&display=swap" rel="stylesheet">
+    <!--Style sheets-->
     <link rel="stylesheet" href="../css/about.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/styles.css">
@@ -25,6 +28,7 @@
                 <a href="services.html">services</a>
                 <a href="contact.html">contact</a>
         </nav>
+        <!-- end nav section -->
     </div>
     <main>
         <div class="blue content-padding">
@@ -75,14 +79,14 @@
                 </h2>
                 <p>
                     Customers are likely to choose a company with experience and expertise in designing and developing.
-                    <ul>
-                        <li>Our Portfolio</li>
-                        <li>Good customer service</li>
-                        <li>Competitive pricing</li>
-                        <li>Quality of Work</li>
-                        <li>Turnaround Time</li>
-                    </ul>
                 </p>
+                <ul>
+                    <li>Our Portfolio</li>
+                    <li>Good customer service</li>
+                    <li>Competitive pricing</li>
+                    <li>Quality of Work</li>
+                    <li>Turnaround Time</li>
+                </ul>
             </div>
         </div>
         <div class="content-padding">
@@ -255,10 +259,12 @@
                     <tr>
                       <td>Saturday</td>
                       <td>Closed</td>
+                      <td></td>
                     </tr>
                     <tr>
                       <td>Sunday</td>
                       <td>Closed</td>
+                      <td></td>
                     </tr>
                   </table>
             </div>
