--- a/html/contact.html
+++ b/html/contact.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
+<!--  This template is created by created by: Group(Tanej, Karthik, Saichand, Umanga, Yuzan) -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700&display=swap" rel="stylesheet">
+    
+    <!--Style sheets-->
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/contact.css">
@@ -25,6 +29,7 @@
                 <a href="services.html">services</a>
                 <a href="contact.html" class="active">contact</a>
         </nav>
+        <!-- end nav section -->
     </div>
     <!-- Use the main area to add the main content of the webpage -->
     <main>
@@ -38,7 +43,7 @@
             <h1 class="sub-heading">Contact us</h1>
             <div class="card-container sb">
                 <div class="sub-text">
-                    <img src="../img/contact us.svg" alt="team">
+                    <img src="../img/contact_us.svg" alt="team">
                     <p>
                         Get in touch with the right people at brandname. Email a member of our customer care team, marketing team, technical team or HR team.
                     </p>
@@ -136,10 +141,12 @@
                     <tr>
                       <td>Saturday</td>
                       <td>Closed</td>
+                      <td></td>
                     </tr>
                     <tr>
                       <td>Sunday</td>
                       <td>Closed</td>
+                      <td></td>
                     </tr>
                   </table>
             </div>
