--- a/html/index.html
+++ b/html/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
+<!--  This template is created by created by: Group(Tanej, Karthik, Saichand, Umanga, Yuzan) -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700&display=swap" rel="stylesheet">
+    <!--Style sheets-->
     <link rel="stylesheet" href="../css/about.css">
     <link rel="stylesheet" href="../css/services.css">
     <link rel="stylesheet" href="../css/styles.css">
@@ -27,8 +30,8 @@
                 <a href="services.html">services</a>
                 <a href="contact.html">contact</a>
         </nav>
+        <!-- end nav section -->
     </div>
-    <!-- end nav section -->
     <main>
         <div class="blue content-padding pt0 text-align-center-m">
             <h1 class="heading mt0">The Most Reliable Web Design and Development Services In Toronto</h1>
@@ -235,10 +238,12 @@
                     <tr>
                       <td>Saturday</td>
                       <td>Closed</td>
+                      <td></td>
                     </tr>
                     <tr>
                       <td>Sunday</td>
                       <td>Closed</td>
+                      <td></td>
                     </tr>
                   </table>
             </div>
